panko-compiletest/src/snapshots/panko_compiletest__preprocess-panko__tests__cases__execute__preprocessor__test_elif.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=preprocess"
    - "--stop-after=preprocess"
    - panko/tests/cases/execute/preprocessor/test_elif.c
---
success: true
exit_code: 0
----- stdout -----


int printf(char const*, ...);


int puts(char const*);



int main() {

    puts("it works");

    printf("VALUE: %d\n", 3 );
}

----- stderr -----
